k8s/app.dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: o2obots-app-frontend
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: o2obots-app-frontend
  template:
    metadata:
      labels:
        app: o2obots-app-frontend
        env: dev
    spec:
      serviceAccountName: o2obots-default-app
      containers:
        - name: o2obots-app-frontend
          image: o2obotsteam/o2obots-app-frontend-dev:fedd696
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
      imagePullSecrets:
        - name: o2obots-docker
---
apiVersion: v1
kind: Service
metadata:
  name: o2obots-app-frontend
  namespace: application
spec:
  type: ClusterIP
  selector:
    app: o2obots-app-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: o2obots-app-frontend
  namespace: application
  annotations:
    alb.ingress.kubernetes.io/group.name: o2obots-private-dev
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=300
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    external-dns.alpha.kubernetes.io/hostname: o2ospot.dev.o2obots.com

spec:
  ingressClassName: alb
  rules:
    - host: o2ospot.dev.o2obots.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: o2obots-app-frontend
                port:
                  number: 80
# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: o2obots-app-frontend-hpa
#   namespace: application
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: o2obots-app-frontend
#   minReplicas: 1
#   maxReplicas: 1
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 80
#     - type: Resource
#       resource:
#         name: memory
#         target:
#           type: Utilization
#           averageUtilization: 80
