k8s/app.prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: o2obots-app-frontend
  namespace: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: o2obots-app-frontend
  template:
    metadata:
      labels:
        app: o2obots-app-frontend
        env: prod
    spec:
      serviceAccountName: o2obots-default-app
      containers:
        - name: o2obots-app-frontend
          image: o2obotsteam/o2obots-app-frontend-prod:c45f189
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 512Mi
      imagePullSecrets:
        - name: o2obots-docker
---
apiVersion: v1
kind: Service
metadata:
  name: o2obots-app-frontend
  namespace: application
spec:
  type: ClusterIP
  selector:
    app: o2obots-app-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: o2obots-app-frontend
  namespace: application
  annotations:
    alb.ingress.kubernetes.io/group.name: o2obots-public-prod
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=300
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'

spec:
  ingressClassName: alb
  rules:
    - host: app.o2ospot.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: o2obots-app-frontend
                port:
                  number: 80
